@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4HepRepFileSceneHandler.cc,v 1.8 2002-11-26 07:14:57 duns Exp $
+// $Id: G4HepRepFileSceneHandler.cc,v 1.9 2002-12-11 16:05:26 johna Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 //
@@ -81,22 +81,9 @@ void G4HepRepFileSceneHandler::EstablishSpecials
 
 void G4HepRepFileSceneHandler::BeginModeling() {
   G4VSceneHandler::BeginModeling();  // Required: see G4VSceneHandler.hh.
-  // Force culling off...
-  if (fpModel) {
-    fpOriginalMP = fpModel->GetModelingParameters();
-    if (fpOriginalMP) {
-      fpNonCullingMP = new G4ModelingParameters(*fpOriginalMP);
-      fpNonCullingMP->SetCulling(false);
-      fpModel->SetModelingParameters(fpNonCullingMP);
-    }
-  }
 }
 
 void G4HepRepFileSceneHandler::EndModeling() {
-  if (fpModel && fpOriginalMP) {
-    fpModel->SetModelingParameters(fpOriginalMP);
-    delete fpNonCullingMP;
-  }
   G4VSceneHandler::EndModeling();  // Required: see G4VSceneHandler.hh.
 }
 
