@@ -1,4 +1,4 @@
-$Id: History,v 1.8 2001-08-24 20:41:25 johna Exp $
+$Id: History,v 1.9 2002-12-11 16:09:16 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -23,6 +23,9 @@ committal in the CVS repository !
 
 History file for visualization/Tree sub-category
 ------------------------------------------------
+
+11th December 2002  John Allison  (vis-V04-01-10)
+- Fixed default view parameters (global culling false).
 
 24th August 2001  John Allison  (vis-V03-02-13)
 - Replaced Dump by RequestPrimitives.  No change of functionality.
